# Tally

./: CMakeLists.txt  README.md  graph.txt  script.sh
analise/: graph.py
analise/cache_threads_diff_work/: f100000_10  f100000_7  f100000_9  f10000_10  f10000_8  f1000_7  f100_8  f100_9  f10_10  f10_7  f10_8  f1_10  f1_7
analise/test_results/: setup.txt
analise/teste1_cache_files/: results.txt  run_cache_files.sh  setup.txt  t1  t10  t100  t1000  t2  t20  t200  t2000  t4  t40  t400  t4000
analise/teste1_cache_threads/: graph.py  main.c  results.txt  setup.txt  t1  t10  t100  t1000  t10000  t100000
analise/teste1_calc_switch/: calc.py  graph.py
analise/teste1_context_switch/: graph.py  results.txt  t10000_1  t10000_10  t10000_100  t10000_1000  t10000_10000  t10000_100000  t100_1  t100_10  t100_100  t100_1000  t100_10000  t100_100000  t1_1  t1_10  t1_100  t1_1000  t1_10000  t1_100000  tb10000_1  tb10000_10  tb10000_100  tb10000_1000  tb10000_10000  tb10000_100000  tb100_1  tb100_10  tb100_100  tb100_1000  tb100_10000  tb100_100000  tb1_1  tb1_10  tb1_100  tb1_1000  tb1_10000  tb1_100000
analise/teste1_context_switch_cost_bin/: graph.py  t128_1024  t128_128  t128_131072  t128_16  t128_2048  t128_2097152  t128_256  t128_32  t128_32768  t128_4  t128_4096  t128_4194304  t128_512  t128_64  t128_65536  t128_8192  t128_8388608  t1_1048576  t1_128  t1_131072  t1_134217728  t1_16384  t1_2  t1_2048  t1_33554432  t1_524288  t1_536870912  t1_65536  t1_8388608  t8192_1024  t8192_131072  t8192_16  t8192_32768  t8192_64
analise/teste1_cycles_skipped/: cs1  cs100  cs10000  graph.py
analise/teste1_diff_work/: create.py  f100000_10  f100000_7  f100000_8  f100000_9  f10000_10  f10000_7  f10000_8  f10000_9  f1000_10  f1000_7  f1000_8  f1000_9  f100_10  f100_7  f100_8  f100_9  f10_10  f10_7  f10_8  f10_9  f1_10  f1_11  f1_7  f1_8  f1_9  gaus.py  graph.py  results.txt
analise/teste1_work/: graph.py  w1  w100  w10000  wf1  wf100  wf10000
analise/teste2_cache_files/: compile_code.sh  gaus.py  main.c  results.txt  run_cache_files.sh  setup.txt  t1  t10  t100  t1000  t2  t20  t200  t2000  t4  t40  t400  t4000
code/: _test_dp_large.c  bfs.c  dfs.c  func.c  random_walk.c  test_enmu.c  test_hash.c  test_switch.c  test_time.c
include/: cycles_probe.h  flags.h  graph.h  graph_api.h  graph_func.h  llist.h  minithread.h  minithread_api.h  minithread_struct.h  modules.h  shmall.h  shmall_api.h
modules/: README
src/: cycles_probe.c  gcc-tally.cpp  main.c  minithread.c  minithread_alternetive.c
(+471 files in other folders)
